# spoton_ml

./: .gitignore  ANALYSIS_PLANNING.md  DATASET.md  LICENSE  PHASE1_IMPLEMENTATION.md  PHASE1_IMPLEMENTATION_README.md  PHASE2_REID_ANALYSIS_PLAN.md  README.md  REFACTORING_SUMMARY.md  debug_rfdetr_data.py  main.py  pyproject.toml  requirements.txt  test_model_comparison.py  test_rfdetr_data_conversion.py  test_rfdetr_model.py  train_rtdetr_simple.py
configs/: backend_style_tracking_reid_config.yaml  comparison_config.yaml  comparison_run_config.yaml  debug_detection_model_comparison_config.yaml  detection_analysis_config.yaml  detection_model_comparison_config.yaml  eda_config.yaml  enhanced_detection_analysis_config.yaml  experiment_config.yaml  explainability_config.yaml  fasterrcnn_detection_analysis_config.yaml  fasterrcnn_training_config.yaml  model_comparison_config.yaml  reid_analysis_config.yaml  reid_campus_config.yaml  reid_comparison_config.yaml  reid_factory_config.yaml  reid_finetune_config.yaml  reid_training_config.yaml  rfdetr_comparison_config.yaml  rfdetr_detection_analysis_config.yaml  rfdetr_test_config.yaml  rfdetr_training_config.yaml  rtdetr_campus_config.yaml  rtdetr_factory_config.yaml  rtdetr_training_config.yaml  single_run_config.yaml  tracking_failure_analysis_config.yaml  tracking_reid_comparison_config.yaml  training_detection_config.yaml  yolo11_campus_config.yaml  yolo11_factory_config.yaml  yolo12_campus_config.yaml  yolo12_factory_config.yaml  yolo26_campus_config.yaml  yolo26_factory_config.yaml
homography_data_ml/: README.md  (+8 more)
(+160 files in other folders)
